Fix photo paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@
         const victory = document.getElementById('victory');
         const loading = document.getElementById('loading');
 
-        // Photo paths from Desktop/val folder
+        // Photo paths from val folder
         const photoFiles = [
-            'Desktop/val/Screenshot 2026-02-13 at 22.29.30.png',
-            'Desktop/val/Screenshot 2026-02-13 at 22.29.40.png',
-            'Desktop/val/Screenshot 2026-02-13 at 22.29.53.png',
-            'Desktop/val/Screenshot 2026-02-13 at 22.30.04.png',
-            'Desktop/val/photo1.jpg',
-            'Desktop/val/photo2.jpg'
+            'val/Screenshot 2026-02-13 at 22.29.30.png',
+            'val/Screenshot 2026-02-13 at 22.29.40.png',
+            'val/Screenshot 2026-02-13 at 22.29.53.png',
+            'val/Screenshot 2026-02-13 at 22.30.04.png',
+            'val/photo1.jpg',
+            'val/photo2.jpg'
         ];
 
         // Load photos on page load
